workfindr/client/css/index.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Varela+Round&display=swap');

:root {
  --main-bg-color: white;
  --main-color: black;      /* where we set background we also need to set color */
  --PONTBlue: #36b6b0;      /* renamed from verdigris to PONTBlue (though it is more turqoise so blue may not be the best choice) */
  --PONTLightBlue: #7fb9e6; /* renamed from teagreen to PONTLightBlue */
  --PONTRed: #e8491f;       /* renamed from flame to PONTRed */
  --PONTGreen: #b2cf65;     /* renamed from middlegreenyellow to PONTGreen */
  --PONTOrange: #e69911;    /* rename from gamboge to PONTOrange */
  --davys-gray: #333;

  /* defaults before the fonts load */
  --title-font: 'Varela Round', sans-serif;
  --text-font: 'Open Sans', sans-serif;
}

* {
  padding: 0;
  margin: 0;
  font-family: var(--title-font);
}

/* set global margin and padding to 0 so defaults don't interfer with layout */

body {
  background-color: var(--main-bg-color);
  color: var(--main-color);
  background-image: url('../img/bgimg.png');
  overflow-x: hidden;

  /* to prevent the horizontal scrollbar turning on automatically with the vertical scroll bar */
}

/* TODO: Make the colors for the navbar-slide menu match the rest of the pages. */
#navbar-slide {
  position: absolute;
  width: 20em;
  top: 5em; /* just under the navbar */
  bottom: 0; /* bottom of screen because the <nav> doesn't count */
  background-color: var(--davys-gray);
  display: none;
  list-style: none;
}

#navbar-slide.active {
  display: flex;
  flex-direction: column;
  right: 0;
  z-index: 1;
}

.navbar-slide-item {
  display: block;
  color: var(--main-bg-color);
  text-decoration: none;
  margin: 0;
  padding: 2rem;
  text-align: center;
}

.navbar-slide-item:hover {
  background-color: var(--PONTBlue);
}

#title {
  font-size: var(--title-fontsize, 2em);
  color: var(--PONTRed);
  text-align: center;
  max-height: 100%;
  overflow: auto;
}

h1 {
  margin: 0.5em;
}

#navbar {
  box-shadow: 0 0 0.25rem 0.01rem var(--davys-gray);
  width: 100vw;
  height: 5em;
  display: flex;
  justify-content: center;
}

#navbar-top {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5em;
  min-width: 20em;
  width: inherit;
  max-width: 50em;
}

#logo {
  width: 15em;
  height: 3em;
  object-fit: scale-down;
  margin: 0.25rem;
}

#nav-btn {
  padding: 1rem;
  cursor: pointer;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#swipe-page {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 5em 3.5em 1fr 4em;
  row-gap: 0.3em;
  width: 100%;
  max-width: 50em;
  position: absolute;
  top: 0;

  /* variables created in js/nextjob.js function setMainHeight */
  margin: var(--nav-height, 5em) var(--side-margin, auto) var(--ftr-height, 0);
  height: var(--swipe-page-height, 90vh);
}

#swipe-page > #title {
  grid-row-start: 1;
  grid-row-end: 2;
  grid-column-start: 1;
  grid-column-end: 4;
}

#swipe-info {
  grid-column-start: 1;
  grid-column-end: 4;
  grid-row-start: 3;
  grid-row-end: 4;
  display: grid;
  grid-template-rows: 8em auto 2em;
  width: 90%;
  max-width: 40em;
  height: var(--swipe-info-height, 90%);
  padding: 0.5em;
  margin: auto;
  background-color: var(--main-bg-color);
  box-shadow: 0 0 0.5em rgb(178, 207, 101);
  border-radius: 0.5em;

  /* max height set in client/js/nextjob.js */
}

#swipe-image {
  width: 8em;
  height: 8em;
  margin: 0 auto;
}

#swipe-btns {
  grid-column-start: 1;
  grid-column-end: 4;
  grid-row-start: 4;
  grid-row-end: 5;
  display: flex;
  justify-content: space-between;
  align-items: stretch;
  height: 100%;
}

#btn-shortlist {
  grid-column-start: 2;
  grid-column-end: 4;
  grid-row-start: 2;
  grid-row-end: 3;
  justify-self: end;
  width: 10em;
}

#info-text { /* maybe limit text length in this box with JS?? */
  text-align: left;
  padding: 0 calc(20% - 75px); /* no padding on mobile */
  font-family: var(--text-font);
  height: var(--swipe-infotext-height, auto);
  max-height: 100%;
  overflow: auto;
}

.show-btn {
  cursor: pointer;
  color: var(--PONTLightBlue);
  font-weight: bold;
  justify-self: center;
  align-self: center;
  padding: 0.3em;
}

.list-item-container {
  display: grid;
  grid-template-rows: auto auto;
  grid-template-columns: 5em auto 25%; /* allows for button on shortlist to be mobile friendly */
  height: 6.4em;
  width: 95%;
  max-width: 40em; /* could be a touch wider */
  margin-top: 0.5em;
  margin-bottom: 0.5em;
  padding: 0.5em;
  background-color: white;
  box-shadow: 0 0 0.5em rgb(178, 207, 101);
  border-radius: 0.5em;
}

.list-item-container.expanded {
  min-height: 12em;
  height: auto;
}

.list-item-title {
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  padding: 0.3em;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.list-item-container.expanded > .list-item-title {
  white-space: normal;
}

.quest-rev-title {
  grid-column-start: 1;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 2;
  padding: 0.3em;
  text-align: center;
  border-bottom: 0.15em dashed var(--PONTLightBlue);
}

.quest-ans {
  grid-column-start: 1;
  grid-column-end: 4;
  grid-row-start: 2;
  grid-row-end: 3;
  display: flex;
  justify-content: space-around;
  align-items: center;
  max-width: 100%;
  width: 50em;
  margin: 0.5em 0;
}

.quest-ans > * {
  display: flex;
  align-items: center;
  justify-content: center;
  width: inherit;
  max-width: 40%;
  height: 3em;
  margin: 0.5em 0;
  border-radius: 3em;
  border: thin solid var(--davys-gray);
  text-transform: capitalize;
  cursor: pointer;
}

.quest-ans > .selected.yes {
  background: var(--PONTGreen);
}

.quest-ans > .selected.no {
  background: var(--PONTRed);
}

.swipe-item-image {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 3;
  max-height: 80%;
  max-width: 80%;
  display: flex;
  justify-self: center;
  align-self: center;
}

.swipe-choice {
  grid-column-start: 3;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 3;
  max-height: 100%;
  max-width: 100%;
  padding: 0.5em;
  border-radius: 3em;
  display: flex;
  align-items: center;
  justify-content: center;
  justify-self: center;
  align-self: center;
  font-size: 2em;
  cursor: pointer;
}

.shortlist-btns {
  display: flex;
  flex-wrap: wrap;
  align-content: space-around;
  justify-items: center;
  height: 100%;
  grid-column-start: 3;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 3;
}

/* TODO: Added shadow - this make them look more like buttons but is there a better way to accomplish this? */
.liked {
  background: var(--PONTGreen);
  box-shadow: 0 0 0.2em var(--davys-gray);
}

/* TODO: Added shadow - this make them look more like buttons but is there a better way to accomplish this? */
.disliked {
  background: var(--PONTRed);
  box-shadow: 0 0 0.2em var(--davys-gray);
}

.swipe-item-desc {
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 2;
  grid-row-end: 3;
  padding: 0.3em;
  text-align: left;
  overflow: hidden;
}

#job-title {
  font-size: 3rem;
  text-align: center;
  color: var(--PONTRed);
  margin: 2rem 0 2rem;
}

.button {
  color: var(--main-bg-color);
  padding: 0.2em;
  font-size: 1em;
  border-radius: 0.5em;
  margin: 0 0.25rem;
  width: 100%;
  max-width: 10rem;
  min-height: 4em;
  max-height: 100%;
}

.button:hover {
  cursor: pointer;
}

.btn-1 {
  background-color: var(--PONTRed);
  border: 0.2em solid var(--PONTRed);
}

.btn-1:active {
  color: var(--PONTRed);
  background-color: var(--main-bg-color);
}

.btn-2 {
  background-color: var(--main-bg-color);
  color: var(--PONTLightBlue);
  border: 0.2em solid var(--PONTLightBlue);
}

.btn-2:active {
  color: var(--main-bg-color);
  background-color: var(--PONTLightBlue);
}

.btn-3 {
  background-color: var(--PONTGreen);
  border: 0.2em solid var(--PONTGreen);
}

.btn-3:active {
  color: var(--PONTGreen);
  background-color: var(--main-bg-color);
}

